# dj_101_bt_real_state

./: README.md  pyproject.toml
accounts/: views.py
btre/: settings.py
btre/static/css/: all.css
contacts/: views.py
contacts/migrations/: 0001_initial.py
listings/: views.py
listings/migrations/: 0001_initial.py
pages/: views.py
realtors/: admin.py
realtors/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: dashboard.html  login.html  register.html
templates/admin/: base_site.html
templates/listings/: listings.html
templates/pages/: about.html  index.html
