[tool.poetry]
name = "django-project-101"
version = "0.1.0"
description = ""
authors = ["DeiAsPie"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.10"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
ruff = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
